Update from Colab

--- a/params/config.ini
+++ b/params/config.ini
@@ -21,15 +21,15 @@
 #validLabelPath = /home/lj/lj/program/python/SLR20240523/data/CSL-Daily/dev.txt
 #testLabelPath = /home/lj/lj/program/python/SLR20240523/data/CSL-Daily/test.txt
 # CE-CSL
-trainDataPath = /home/lj/lj/program/python/DataSets/CE-CSL/data/train
-validDataPath = /home/lj/lj/program/python/DataSets/CE-CSL/data/dev
-testDataPath = /home/lj/lj/program/python/DataSets/CE-CSL/data/test
-trainLabelPath = /home/lj/lj/program/python/SLR20240803/data/CE-CSL/train.csv
-validLabelPath = /home/lj/lj/program/python/SLR20240803/data/CE-CSL/dev.csv
-testLabelPath = /home/lj/lj/program/python/SLR20240803/data/CE-CSL/test.csv
+trainDataPath = /content/drive/MyDrive/gesture/CE-CSL/data/train
+validDataPath = /content/drive/MyDrive/gesture/CE-CSL/data/dev
+testDataPath = /content/drive/MyDrive/gesture/CE-CSL/data/test
+trainLabelPath = /content/drive/MyDrive/gesture/CE-CSL/train.csv
+validLabelPath = /content/drive/MyDrive/gesture/CE-CSL/dev.csv
+testLabelPath = /content/drive/MyDrive/gesture/CE-CSL/test.csv
 
-bestModuleSavePath = module/bestMoudleNet.pth
-currentModuleSavePath = module/currentMoudleNet.pth
+bestModuleSavePath = /content/drive/MyDrive/gesture/TFNet-CE-CSL-CSLDaily-32.46.pth
+currentModuleSavePath = /content/drive/MyDrive/gesture/TFNet-CE-CSL-CSLDaily-32.46.pth
 
 [Params]
 device = 1
