Update from Colab

--- a/params/config.ini
+++ b/params/config.ini
@@ -28,8 +28,8 @@ trainLabelPath = /content/drive/MyDrive/gesture/CE-CSL/CE-CSL/label/train.csv
 validLabelPath = /content/drive/MyDrive/gesture/CE-CSL/CE-CSL/label/dev.csv
 testLabelPath = /content/drive/MyDrive/gesture/CE-CSL/CE-CSL/label/test.csv
 
-bestModuleSavePath = /content/drive/MyDrive/gesture/TFNet-CE-CSL-CSLDaily-32.46.pth
-currentModuleSavePath = /content/drive/MyDrive/gesture/TFNet-CE-CSL-CSLDaily-32.46.pth
+bestModuleSavePath = /content/drive/MyDrive/gesture/module/bestMoudleNet.pth
+currentModuleSavePath = /content/drive/MyDrive/gesture/module/currentMoudleNet.pth
 
 [Params]
 device = 1
