Update from Colab

--- a/params/config.ini
+++ b/params/config.ini
@@ -21,15 +21,15 @@
 #validLabelPath = /home/lj/lj/program/python/SLR20240523/data/CSL-Daily/dev.txt
 #testLabelPath = /home/lj/lj/program/python/SLR20240523/data/CSL-Daily/test.txt
 # CE-CSL
-trainDataPath = /content/TFNet/data/CE-CSL/video2/train
-validDataPath = /content/TFNet/data/CE-CSL/video2/dev
-testDataPath = /content/TFNet/data/CE-CSL/video2/test
-trainLabelPath = /content/TFNet/data/CE-CSL/label/train.csv
-validLabelPath = /content/TFNet/data/CE-CSL/label/dev.csv
-testLabelPath = /content/TFNet/data/CE-CSL/label/test.csv
+trainDataPath = /content/TFNet/data/xiaomi/video2/train
+validDataPath = /content/TFNet/data/xiaomi/video2/dev
+testDataPath = /content/TFNet/data/xiaomi/video2/test
+trainLabelPath = /content/TFNet/data/xiaomi/label/train.csv
+validLabelPath = /content/TFNet/data/xiaomi/label/dev.csv
+testLabelPath = /content/TFNet/data/xiaomi/label/test.csv
 
-bestModuleSavePath = /content/TFNet/module/bestMoudleNet.pth
-currentModuleSavePath = /content/TFNet/module/currentMoudleNet.pth
+bestModuleSavePath =/content/TFNet/module/bestMoudleNet_1.pth
+currentModuleSavePath = /content/TFNet/module/currentMoudleNet_1.pth
 
 [Params]
 device = 1
